ingress/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: apps
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP from its pool if not
  # specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

#kind: Service
#apiVersion: v1
#metadata:
#  name: ingress-nginx
#  namespace: ingress-nginx
#  labels:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#    app.kubernetes.io/component: controller
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/managed-by: Helm
#
#spec:
#  # this setting is t make sure the source IP address is preserved.
#  externalTrafficPolicy: Local
#  type: LoadBalancer
#  selector:
#    app.kubernetes.io/name: ingress-nginx
#  ports:
#    - name: http
#      port: 80
#      targetPort: http
#    - name: https
#      port: 443
#      targetPort: https
