ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - http:
        paths:
          - path: /stocks
            pathType: Prefix
            backend:
              service:
                name: stocks
                port:
                  number: 8080
